--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,70 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qB-ig-DDD">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Record Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5L-Vd-egw">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Microphone">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="4qB-ig-DDD" secondAttribute="centerX" id="4xC-as-xal"/>
+                            <constraint firstAttribute="centerY" secondItem="v5L-Vd-egw" secondAttribute="centerY" constant="41" id="BR8-xF-BXC"/>
+                            <constraint firstItem="4qB-ig-DDD" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="JGa-Bw-laI"/>
+                            <constraint firstAttribute="centerY" secondItem="4qB-ig-DDD" secondAttribute="centerY" id="PME-Qu-O3S"/>
+                            <constraint firstItem="4qB-ig-DDD" firstAttribute="height" secondItem="kh9-bI-dsS" secondAttribute="height" id="TrY-G2-Vad"/>
+                            <constraint firstAttribute="centerX" secondItem="4qB-ig-DDD" secondAttribute="centerX" id="hJu-q4-tta"/>
+                            <constraint firstAttribute="centerX" secondItem="v5L-Vd-egw" secondAttribute="centerX" id="vbl-3B-aTC"/>
+                            <constraint firstAttribute="centerY" secondItem="4qB-ig-DDD" secondAttribute="centerY" id="zWO-Wx-fgz"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="4qB-ig-DDD"/>
+                                <exclude reference="v5L-Vd-egw"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="4xC-as-xal"/>
+                                <exclude reference="JGa-Bw-laI"/>
+                                <exclude reference="PME-Qu-O3S"/>
+                                <exclude reference="TrY-G2-Vad"/>
+                                <exclude reference="hJu-q4-tta"/>
+                                <exclude reference="zWO-Wx-fgz"/>
+                                <exclude reference="BR8-xF-BXC"/>
+                                <exclude reference="vbl-3B-aTC"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <exclude reference="4qB-ig-DDD"/>
+                                <include reference="v5L-Vd-egw"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="4xC-as-xal"/>
+                                <exclude reference="JGa-Bw-laI"/>
+                                <exclude reference="PME-Qu-O3S"/>
+                                <exclude reference="TrY-G2-Vad"/>
+                                <exclude reference="hJu-q4-tta"/>
+                                <include reference="zWO-Wx-fgz"/>
+                                <include reference="BR8-xF-BXC"/>
+                                <include reference="vbl-3B-aTC"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="Microphone" width="100" height="100"/>
+    </resources>
 </document>
